# Pymander

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: alembic.ini  env.py
alembic/versions/: 8817791c416d_create_content_actor_narrative_tables.py
dashboard/: package.json  vite.config.ts
dashboard-client/: index.html  package.json  tsconfig.app.json  vite.config.ts
dashboard-client/src/: App.tsx  index.css  main.tsx
dashboard-client/src/components/charts/: EngagementCurve.tsx  PlatformTimeline.tsx  VelocityChart.tsx
dashboard-client/src/components/common/: AlertBanner.tsx  LoadingState.tsx  MetricCard.tsx  PlatformBadge.tsx  StatusBadge.tsx  TimeAgo.tsx
dashboard-client/src/components/coordination/: ClusterCard.tsx  EvidencePanel.tsx
dashboard-client/src/components/narrative/: NarrativeCard.tsx  NarrativeFeed.tsx
dashboard-client/src/components/network/: GraphExplorer.tsx
dashboard-client/src/hooks/: useApi.ts  useWebSocket.ts
dashboard-client/src/lib/: api.ts  constants.ts  types.ts
dashboard-client/src/pages/: ActorProfile.tsx  AlertFeed.tsx  BriefingDetail.tsx  BriefingList.tsx  CommandCenter.tsx  CoordinationDashboard.tsx  NarrativeDetail.tsx  NarrativeList.tsx  NetworkExplorer.tsx  SearchPage.tsx
dashboard/src/: App.tsx  index.css
dashboard/src/components/: MetricCard.tsx  Nav.tsx  PipelineFlow.tsx  SourceCard.tsx
dashboard/src/hooks/: useApi.ts  useWebSocket.ts
dashboard/src/pages/: Explorer.tsx  Ingestion.tsx  Narratives.tsx  Overview.tsx  Pipeline.tsx
dashboard/src/types/: api.ts
scripts/: create_topics.sh
src/pymander/api/: app.py  deps.py
src/pymander/api/v1/: router.py
src/pymander/api/v1/routes/: health.py  metrics.py  narratives.py  pipeline.py  search.py  ws.py
src/pymander/api/v2/: auth.py  router.py
src/pymander/api/v2/routes/: alerts.py  auth.py  briefings.py  coordination.py  narratives.py  network.py  search.py
src/pymander/core/: config.py  constants.py  logging.py  metrics.py
src/pymander/db/: engine.py
src/pymander/db/models/: actor.py  base.py  content.py  narrative.py
src/pymander/db/repositories/: content.py
src/pymander/ingestion/: consumer.py  producer.py  topics.py
src/pymander/ingestion/adapters/: base.py  bluesky.py  fourchan.py  google_trends.py  mock.py  news.py  reddit.py  substack.py  telegram.py  twitter.py  wikipedia.py  youtube.py
src/pymander/intelligence/: behavioral_signals.py  briefings.py  coordination.py  identity.py  prediction.py
src/pymander/narrative/: validator.py
src/pymander/network/: analytics.py  co_narrative.py  graph_builder.py  neo4j_client.py
src/pymander/pipeline/: clustering.py  embedding.py  engagement_poller.py  image_hasher.py  ingestion_consumer.py  runner.py  stage.py
src/pymander/schemas/: briefing.py  content.py  coordination.py  enums.py  narrative.py  network.py
tests/unit/: test_schemas.py
tests/unit/api/: test_health.py
tests/unit/core/: test_metrics.py
tests/unit/ingestion/: test_mock_adapter.py  test_reddit.py
tests/unit/intelligence/: test_coordination.py  test_identity.py  test_prediction.py
tests/unit/network/: test_graph_builder.py
tests/unit/schemas/: test_content.py
